# nhanes_80hz

./: .gitignore  README.Rmd  README.md  get_filenames.R  imputing_data.qmd  nhanes_80hz.Rproj  nhanes_80hz_stepcount.yml  todo.txt  try_gcalibrate.R  write_gt3x.R  write_test_acc_csv.R
code/R/: 00_actinet_conda.R  00_convert_paxmin_xpt_to_parquet.R  00_download_asleep_models.R  00_download_nhanes_xpts.R  00_download_stepcount_models.R  00_get_filenames.R  02_tarball_to_csv.R  05_output_copy_csv_with_new_header.R  05_output_get_counts_from30.R  05_output_get_counts_from30Hz.R  05_output_resample_data.R  05_output_run_actinet.R  05_output_run_asleep.R  05_output_run_mims.R  05_output_run_nonwear_swan.R  05_output_run_process.R  05_output_run_stepcount.R  05_output_run_stepcount_reloadmodel.R  06_output_aggregate_ac_lfe.R  06_run_ac_nonwear_sleep.R  10_mims_comparison.R  999_check_min_times.R  999_quick_mims.R  999_quick_mims_check.R  all_log_flags.R  cat_csv_files.R  check_headers.R  check_output_csv.R  check_times_stepcount.R  demog.R  download_nnyfs.R  download_xpts.R  estimate_cadence.R  example_adept.R  fix_csv.R  flag_all_zero.R  flag_exploration.R  get_1s_counts.R  get_filenames.R  get_files.R  (+34 more)
code/python/: convert.py  (+8 more)
code/shell/: ai_quickstart.sh  ai_setup.sh  conda_ssl_wearables.sh  environment.yaml  example_accProcess.sh.py  fix_headers.sh  get_tarballs.sh  gzip_acc_csv.sh  make_csvs.sh  pipeline.sh  pipeline_ai.sh  pyproject.toml  run_accProcess.sh  sync_acc_csv.sh  unzip_test_acc.sh
docs/: fingerprint_predictors.html  fingerprint_predictors.qmd  refs.bib
(+7 files in other folders)
