[project]
name = "ssl-wearables"
version = "0.1.0"
description = "SSL Wearables Frailty Classification"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "accelerometer-features",
    "neurokit2",
    "imbalanced-learn",
    "optuna",
    "shap",
    "wandb",
    "tqdm",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "flake8",
]